# cloudforge

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  .env.sample  .gitignore  IMPLEMENTATION_SUMMARY.md  MULTI_CHOICE_OPTIONS_GUIDE.md  README.md  STARTUP.md  demo_options.py  demo_output.txt  example_api_workflow.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
backend/.claude/: settings.local.json
backend/app/: config.py  main.py
backend/app/agents/agent1/: __init__.py  graph.py  llm.py  nodes.py  prompts.py  standalone_smoke_test.py  state.py  tools.py
backend/app/agents/agent3/: __init__.py  config.py  graph.py  llm.py  models.py  state.py  utils.py
backend/app/agents/agent3/nodes/: assembler.py  code_fixer.py  code_generator.py  code_validator.py  codegen_collector.py  codegen_worker.py  completeness_checker.py  frontend_codegen_worker.py  infra_codegen_worker.py  manager_agent.py  orchestrator.py  parse_input.py  scaffold_node.py  test_generator.py  test_orchestrator.py  tf_fixer.py  tf_generator.py
backend/app/agents/agent3/prompts/: code_prompts.py  manager_prompts.py  orchestrator_prompts.py  renderer.py  test_fix_prompts.py  test_prompts.py  tf_prompts.py
backend/app/agents/agent3/scaffold/: templates.py
backend/app/agents/agent3/subgraphs/: code_generation_loop.py  tf_validation_loop.py
backend/app/agents/agent3/tools/: syntax_tools.py  task_tools.py  test_tools.py  tf_tools.py
backend/app/agents/architecture_planner/: __init__.py  arch_simulator.py  arch_test_agent.py  architecture_agent.py  compliance_agent.py  component_rag_agent.py  console.py  eval_agent.py  graph.py  kg_traversal_agent.py  llm_utils.py  query_agent.py  research_agent.py  resilience_simulator.py  service_discovery_agent.py  state.py
backend/app/agents/architecture_planner/analysis/: arch_rules.py
backend/app/agents/architecture_planner/cost_fetchers/: __init__.py  aws.py  azure.py  (+2 more)
backend/app/core/: dependencies.py  security.py
backend/app/db/: encryption.py  mongo.py
backend/app/providers/: aws.py  base.py  factory.py
backend/app/routers/: agent3.py  architecture.py  architecture_sse.py  auth.py  build.py  deploy.py  files.py  history.py  prd.py  projects.py  validate.py  waitlist.py  workflows.py
backend/app/schemas/: arch_sse.py  architecture.py  auth.py  build.py  deploy.py  prd.py  project.py  validate.py  waitlist.py  workflow.py
backend/app/services/: arch_sessions.py  deploy_orchestrator.py  deploy_state.py  github.py  terraform_generator.py  workflow_sessions.py
backend/app/utils/: serialization.py
backend/tests/: conftest.py  run_agent3_output.py  test_agent3_e2e_mock.py  test_agent3_full.py  test_kg_rag.py  test_scaffold_smoke.py  test_terraform_mcp.py
backend/tests/fixtures/: sample_topology.json
(+181 files in other folders)
