[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.3",
    "langgraph-prebuilt>=1.0.8",
    "langgraph-cli>=0.4.19",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langsmith>=0.7.22",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.42.0",
    "pyyaml>=6.0.2",
    "checkov>=3.2.0",
    "jsonschema>=4.23.0",
    "jinja2>=3.1.4",
    "langchain-ollama>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
